Fix img class overlap

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -50,7 +50,7 @@ a:hover{
   background-color: #C6E9FF;
 }
 
-img {
+.nav-elements {
   width: 40px;
   height: 40px;
 }
